Fix HTML encoding issues and update file paths

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Bonfire服务器</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="/Bonfire/styles.css">
 </head>
 
 <body>
@@ -173,4 +173,5 @@ window.onload = function() {
 };
 </script>
 </body>
+
 </html>
