--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header-content">
         <div class="logo">
           <video muted="muted" autoplay="autoplay" loop="loop" >
-            <source src="../../BonfireFuWuQi/Bonfire服务器首页视频.mp4" type="video/mp4">
+            <source src="/Bonfire/Bonfire服务器首页视频.mp4" type="video/mp4">
           </video>
         </div>
         <div class="tagline">欢迎来到Bonfire服务器，一起创造，一起冒险！</div>
@@ -175,3 +175,4 @@ window.onload = function() {
 </body>
 
 </html>
+
